--- a/assets/style.css
+++ b/assets/style.css
@@ -3,17 +3,16 @@ body {
 }
 
 .container {
-	width: 100%;
-	height: 100%;
+	width: 100vw;
+	height: 100vh;
 	display: flex;
-	flex-wrap: wrap;
-	float: left;
 }
 
 .left-bar {
 	width: 250px;
-	height: 100vh;
-	border-right: 5px solid black;
+	height: 100%;
+	border-right: 5px solid red;
+	float: left;
 }
 
 .left-bar-box {
@@ -37,8 +36,42 @@ body {
 }
 
 .canvas {
+	user-select: none;
 	/*width: 85%;*/
-	height: 100vh;
+	width: auto;
+	background-color: green;
+	flex-grow: 100;
+	height: 100%;
+	/*overflow: hidden;*/
+}
+
+.connection-line {
+	pointer-events: none;
+	height: 10px;
+	position: absolute;
+	display: flex;
+	align-items: center;
+	background-color: transparent;
+	/*overflow: hidden;*/
+	/*background-color: red;*/
+}
+
+.arrow-head {
+	/*margin-right: 85%;*/
+	height: 30px;
+	width: 30px;
+	float: right;
+}
+
+.arrow-body {
+	height: 100%;
+	width: calc(100% - 30px);
+	background-color: black;
+}
+
+.arrow-head img {
+	width: 100%;
+	height: 100%;
 }
 
 .state-ball {
@@ -49,11 +82,18 @@ body {
 	vertical-align: middle;
 	font-size: 50px;
 	border-radius: 50%;
-	border: 3px solid orange;
+	border: 3px solid green;
 	position: absolute;
 	background-color: white;
+	/*user-select: none;*/
 	/*display: flex;*/
 	/*align-items: center;*/
+}
+
+.pressingCanvas {
+	background-color: yellow;
+	height: 100%;
+	width: 100%;
 }
 
 .inner-ball {
@@ -83,6 +123,7 @@ body {
     white-space: nowrap;
     width:200px;
     overflow: hidden;
+    user-select: none;
 } 
 [contenteditable="true"].state-ball br {
     display:none;
