--- a/assets/style.css
+++ b/assets/style.css
@@ -11,13 +11,16 @@ body {
 .left-bar {
 	width: 250px;
 	height: 100%;
-	border-right: 5px solid red;
+	position: fixed; /* Remove if needed*/
+	border-right: 5px solid black;
 	float: left;
 }
 
 .left-bar-box {
 	width: 100%;
 	text-align: center;
+	display: box;
+	box-orient: vertical;
 }
 
 .left-bar-box-title {
@@ -26,13 +29,57 @@ body {
 	font-size: 25px;
 }
 
-#testSample {
-	margin-top: 10px;
-	width: 75%;
-}
-
 #left-bar-box-1 {
 	margin-top: 50px;
+}
+
+#left-bar-box-3 {
+	display: flex;
+	justify-content: center;
+}
+
+#test-sample {
+	line-height: 15px;
+	width: 60%;
+	margin-top: 10px;
+}
+
+.multi-test-sample {
+	line-height: 15px;
+	width: 85%;
+	/*margin-right: 6%;*/
+	/*margin-left: 5.5%;*/
+	resize: none;
+}
+
+#multi-test-btn {
+	margin-top: 10px;
+	margin-bottom: 10px;
+}
+
+#left-bar-box-4 {
+	display: flex;
+	justify-content: center;
+}
+
+.response-box {
+	font-family: 'Roboto', sans-serif;
+}
+
+.multi-response-box {
+	height: 150px;
+	width: 85%;
+	overflow: auto;
+	border: 1px solid black;
+	margin-right: .5%;
+}
+
+.response-line {
+	height: 15px;
+	line-height: 15px;
+	font-size: 12px;
+	font-family: 'Roboto', sans-serif;
+	width: 100%;
 }
 
 .canvas {
@@ -46,6 +93,8 @@ body {
 }
 
 .connection-line {
+	z-index: 0;
+	cursor: pointer;
 	pointer-events: none;
 	height: 10px;
 	position: absolute;
@@ -70,19 +119,48 @@ body {
 }
 
 .arrow-head img {
+	pointer-events: none;
 	width: 100%;
 	height: 100%;
 }
 
+.line-container {
+	width: 75px;
+	position: absolute;
+}
+
+.line-text {
+	color: white;
+	/*position: absolute;*/
+	font-family: 'Roboto', sans-serif;
+	font-size: 15px;
+	/*width: 75px;*/
+	width: 100%;
+	text-align: center;
+	line-height: 20px;
+	height: 20px;
+	background-color: #FB8F67;
+}
+
+.connection-circle {
+	z-index: 0;
+	cursor: pointer;
+	border-radius: 50%;
+	border: solid black 10px;
+	background-color: red;
+	/*position: absolute;*/
+}
+
 .state-ball {
+	z-index: 1;
 	font-family: 'Roboto', sans-serif;
 	cursor: pointer;
-	color: blue;
+	color: #FB8F67;
 	text-align: center;
 	vertical-align: middle;
-	font-size: 50px;
+	font-size: 35px;
 	border-radius: 50%;
-	border: 3px solid green;
+	border: 3px solid black;
 	position: absolute;
 	background-color: white;
 	/*user-select: none;*/
@@ -91,7 +169,7 @@ body {
 }
 
 .pressingCanvas {
-	background-color: yellow;
+	background-color: white;
 	height: 100%;
 	width: 100%;
 }
@@ -101,7 +179,7 @@ body {
 	pointer-events: none;
 	position: absolute;
 	border-radius: 50%;
-	border: 1px solid orange;
+	border: 1px solid red;
 	background-color: transparent;
 	top: 50%;
 	left: 50%;
@@ -132,4 +210,84 @@ body {
 [contenteditable="true"].state-ball * {
     display:inline;
     white-space:nowrap;
+}
+
+[contenteditable] {
+    -webkit-user-select: text;
+    user-select: text;
+}
+
+.modal {
+	display: none;
+	position: fixed;
+	z-index: 5;
+	left: 0;
+	top: 0;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
+	height: 100%;
+	overflow: auto;
+	background-color: rgb(0, 0, 0);
+	background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-content {
+	position: relative;
+	top: 50%;
+	transform: translate(0%, -75%);
+	background-color: white;
+	margin: auto;
+	height: 150px;
+	width: 340px;
+	border: 2px solid black;
+	text-align: center;
+}
+
+.modal-title {
+	font-family: 'Roboto', sans-serif;
+	font-size: 20px;
+	height: 25px;
+}
+
+.left-bar-box-subtitle {
+	font-family: 'Roboto', sans-serif;
+	font-size: 15px;
+	margin-top: 10px;
+	line-height: 30px;
+}
+
+.modal-input {
+	border: 1px solid black;
+	height: 25px;
+}
+
+.modal-row {
+	width: 100%;
+	height: 35px;
+}
+
+.modal-button {
+	margin-top: 5px;
+	height: 25px;
+	width: 30%;
+}
+
+#cancel-modal {
+	color: black;
+	margin-right: 5px;
+	font-size: 30px;
+}
+
+#accept-modal {
+	color: black;
+	margin-right: 5px;
+	font-size: 30px;
+}
+
+.close-modal:hover,
+.close-modal:focus {
+	color: red;
+	text-decoration: none;
+	cursor: pointer;
 }
