--- a/assets/style.css
+++ b/assets/style.css
@@ -125,7 +125,7 @@ body {
 }
 
 .line-container {
-	width: 75px;
+	width: 25px;
 	position: absolute;
 }
 
@@ -147,8 +147,8 @@ body {
 	cursor: pointer;
 	border-radius: 50%;
 	border: solid black 10px;
-	background-color: red;
-	/*position: absolute;*/
+	background-color: transparent;
+	position: absolute;
 }
 
 .state-ball {
