--- a/simulators/templates/simulators/simulator.html
+++ b/simulators/templates/simulators/simulator.html
@@ -66,6 +66,7 @@
 	<script>
 		let blackArrowSrc = "{% static 'images/black_arrow_head.png' %}";
 		let blueArrowSrc = "{% static 'images/blue_arrow_head.png' %}";
+		let redArrowSrc = "{% static 'images/red_arrow_head_point.png' %}";
 		let blackPointSrc = "{% static 'images/black_arrow_head_point.png' %}";
 		let statesData = (("{{ states }}").replace(/&(l|g|quo)t;/g, function(a,b){
 		        return {
